# openconverge-poc

./: .gitignore  CONTRIBUTING.md  LICENSE.md  README.md  db-reset.sh  docker-compose-up.sh  docker-compose.yml  package-lock.json
.husky/: pre-commit
backend/: .env.example  Dockerfile  chainlit.md  launch.sh  pyproject.toml
backend/.chainlit/: config.toml
backend/src/: agent.py  api.py  database.py  server.py  settings.py
frontend/: .env.example  Dockerfile  index.html  launch.sh  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  AuthCallBack.ts  config.ts  index.css  vite-env.d.ts
frontend/src/components/: AuthLogin.tsx  DataPrivacyPolicyModal.tsx  FileSources.tsx  FileUploader.tsx  FileViewer.tsx  Layout.tsx  MarkdownRenderer.tsx  NavBar.tsx  ReadmeModal.tsx
frontend/src/hooks/: useChainlitContext.ts
frontend/src/views/: LoginView.tsx  Playground.tsx
