[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "0.2.2"
langchain-openai = "0.1.8"
langchain-postgres = "0.0.7"
langchain-community = "0.2.3"
pypdf = "4.2.0"
boto3 = "1.34.120"
pgvector = "0.2.5"
greenlet = "3.0.3"
pydantic = "2.9.2"
pydantic-settings = "2.3.3"
azure-ai-documentintelligence = "1.0.0b3"
psycopg-binary = "^3.2.3"
chainlit = { url = "https://github.com/transformteamsg/chainlit-converge-upgrade/releases/download/v1.1.202-patch-0.0.7/chainlit-1.1.202.tar.gz" }
uuid7 = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
